training-and-judge-center-backend/deploy/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: training-center
  annotations:
    kubernetes.io/ingress.global-static-ip-name: training-center-ip
    networking.gke.io/managed-certificates: api-cert
    networking.gke.io/v1beta1.FrontendConfig: https-redirect
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 8080
